--- a/cpr_pose.html
+++ b/cpr_pose.html
@@ -16,8 +16,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 1040px;
-      height: 2080px;
+      width: 100%;
+      height: 100%;
     }
 
     #video {
