--- a/cpr_pose.html
+++ b/cpr_pose.html
@@ -1,285 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>CPR Pose Detection</title>
+  <title>CPR Dual Pose Detection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    html,
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
       background: black;
-      overflow: hidden;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
     }
 
-    #video,
-    #canvas {
+    .container {
+      flex: 1;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    video, canvas {
       position: absolute;
-      top: 50%;
-      left: 50%;
       width: 100%;
       height: 100%;
-      max-width: 100vw;
-      max-height: 100vh;
-      transform: translate(-50%, -50%);
-      object-fit: contain;
+      object-fit: cover;
     }
 
-    #video {
-      z-index: 0;
-    }
-
-    #canvas {
-      z-index: 1;
-      pointer-events: none;
+    @media (orientation: portrait) {
+      body {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
-
 <body>
-  <video id="video" autoplay playsinline></video>
-  <canvas id="canvas"></canvas>
+
+  <!-- 鏡頭畫面 + 偵測 -->
+  <div class="container">
+    <video id="userVideo" autoplay playsinline muted></video>
+    <canvas id="userCanvas"></canvas>
+  </div>
+
+  <!-- CPR 示範影片 + 偵測 -->
+  <div class="container">
+    <video id="demoVideo" src="CPR_demonstration.mov" autoplay loop muted playsinline></video>
+    <canvas id="demoCanvas"></canvas>
+  </div>
 
   <!-- MediaPipe -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
 
   <script>
-    const video = document.getElementById("video");
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
+    const userVideo = document.getElementById('userVideo');
+    const userCanvas = document.getElementById('userCanvas');
+    const userCtx = userCanvas.getContext('2d');
 
-    function resizeCanvas() {
-      if (video.videoWidth && video.videoHeight) {
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-      }
+    const demoVideo = document.getElementById('demoVideo');
+    const demoCanvas = document.getElementById('demoCanvas');
+    const demoCtx = demoCanvas.getContext('2d');
+
+    function resizeCanvases() {
+      userCanvas.width = userVideo.videoWidth;
+      userCanvas.height = userVideo.videoHeight;
+      demoCanvas.width = demoVideo.videoWidth;
+      demoCanvas.height = demoVideo.videoHeight;
     }
 
-    video.addEventListener('loadedmetadata', resizeCanvas);
-    window.addEventListener('resize', resizeCanvas);
+    window.addEventListener('resize', resizeCanvases);
 
-    const boxMarginRatio = 0.2;
-    function getBoxDimensions() {
-      const width = canvas.width;
-      const height = canvas.height;
-      const boxX = width * boxMarginRatio;
-      const boxY = height * boxMarginRatio;
-      const boxWidth = width * (1 - 2 * boxMarginRatio);
-      const boxHeight = height * (1 - 2 * boxMarginRatio);
-      return { boxX, boxY, boxWidth, boxHeight };
-    }
+    const drawPose = (ctx, landmarks) => {
+      if (!landmarks) return;
+      drawConnectors(ctx, landmarks, Pose.POSE_CONNECTIONS, { color: 'lime', lineWidth: 3 });
+      drawLandmarks(ctx, landmarks, { color: 'cyan', radius: 3 });
+    };
 
-    function midpoint(p1, p2) {
-      return { x: (p1.x + p2.x) / 2, y: (p1.y + p2.y) / 2 };
-    }
-
-    function calcAngle(a, b, c) {
-      const ab = [b.x - a.x, b.y - a.y];
-      const cb = [b.x - c.x, b.y - c.y];
-      const dot = ab[0] * cb[0] + ab[1] * cb[1];
-      const magAB = Math.hypot(ab[0], ab[1]);
-      const magCB = Math.hypot(cb[0], cb[1]);
-      return Math.acos(dot / (magAB * magCB)) * (180 / Math.PI);
-    }
-
-    function isArmVertical(shoulder, wrist) {
-      const dx = shoulder.x - wrist.x;
-      const dy = shoulder.y - wrist.y;
-      const angle = Math.abs(Math.atan2(dy, dx) * 180 / Math.PI);
-      return angle > 70 && angle < 110;
-    }
-
-    function areElbowsTogether(le, re, threshold = 0.2) {
-      const dx = le.x - re.x;
-      const dy = le.y - re.y;
-      return Math.hypot(dx, dy) < threshold;
-    }
-
-    function onResults(results) {
-      resizeCanvas();
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      const { boxX, boxY, boxWidth, boxHeight } = getBoxDimensions();
-      ctx.strokeStyle = "green";
-      ctx.lineWidth = 6;
-      ctx.strokeRect(boxX, boxY, boxWidth, boxHeight);
-
-      if (!results.poseLandmarks) return;
-
-      let textLine = 60;
-      const drawLine = (text, color = "white") => {
-        ctx.fillStyle = color;
-        ctx.font = `${canvas.height * 0.04}px Arial`;
-        ctx.fillText(text, 20, textLine);
-        textLine += canvas.height * 0.05;
-      };
-
-      const lm = results.poseLandmarks;
-      const ls = lm[11], rs = lm[12];
-      const le = lm[13], re = lm[14];
-      const lw = lm[15], rw = lm[16];
-
-      ctx.strokeStyle = "lime";
-      ctx.lineWidth = 6;
-
-      ctx.beginPath();
-      ctx.moveTo(ls.x * canvas.width, ls.y * canvas.height);
-      ctx.lineTo(le.x * canvas.width, le.y * canvas.height);
-      ctx.lineTo(lw.x * canvas.width, lw.y * canvas.height);
-      ctx.stroke();
-
-      ctx.beginPath();
-      ctx.moveTo(rs.x * canvas.width, rs.y * canvas.height);
-      ctx.lineTo(re.x * canvas.width, re.y * canvas.height);
-      ctx.lineTo(rw.x * canvas.width, rw.y * canvas.height);
-      ctx.stroke();
-
-      const leftAngle = calcAngle(ls, le, lw);
-      const rightAngle = calcAngle(rs, re, rw);
-
-      drawLine("左肘角度: " + leftAngle.toFixed(1));
-      drawLine("右肘角度: " + rightAngle.toFixed(1));
-
-      if (leftAngle < 160 || rightAngle < 160) drawLine("⚠️ 手肘未打直", "yellow");
-      if (!isArmVertical(ls, lw) || !isArmVertical(rs, rw)) drawLine("⚠️ 手腕未在肩膀正下方", "yellow");
-      if (!areElbowsTogether(le, re)) drawLine("⚠️ 雙手未交疊", "yellow");
-
-      if (!window.pressPath) window.pressPath = [];
-      const pressPoint = midpoint(lw, rw);
-      const px = pressPoint.x * canvas.width;
-      const py = pressPoint.y * canvas.height;
-      window.pressPath.push({ x: px, y: py });
-      if (window.pressPath.length > 60) window.pressPath.shift();
-
-      function smoothPath(path, k = 5) {
-        const smoothed = [];
-        for (let i = 0; i < path.length; i++) {
-          let xSum = 0, ySum = 0, count = 0;
-          for (let j = i - Math.floor(k / 2); j <= i + Math.floor(k / 2); j++) {
-            if (path[j]) {
-              xSum += path[j].x;
-              ySum += path[j].y;
-              count++;
-            }
-          }
-          smoothed.push({ x: xSum / count, y: ySum / count });
-        }
-        return smoothed;
-      }
-
-      const smoothedPath = smoothPath(window.pressPath);
-
-      ctx.strokeStyle = "aqua";
-      ctx.lineWidth = 3;
-      ctx.beginPath();
-      smoothedPath.forEach((pt, i) => {
-        if (i === 0) ctx.moveTo(pt.x, pt.y);
-        else ctx.lineTo(pt.x, pt.y);
+    // 建立 pose 偵測器
+    function createPose(onResults) {
+      const pose = new Pose({
+        locateFile: file => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}`
       });
-      ctx.stroke();
-
-      const yValues = smoothedPath.map(p => p.y);
-
-      function findExtrema(yVals) {
-        const peaks = [];
-        for (let i = 1; i < yVals.length - 1; i++) {
-          if (yVals[i] > yVals[i - 1] && yVals[i] > yVals[i + 1]) {
-            peaks.push({ type: 'max', y: yVals[i], index: i });
-          }
-          if (yVals[i] < yVals[i - 1] && yVals[i] < yVals[i + 1]) {
-            peaks.push({ type: 'min', y: yVals[i], index: i });
-          }
-        }
-        return peaks;
-      }
-
-      const extrema = findExtrema(yValues);
-
-      const depths = [];
-      for (let i = 1; i < extrema.length - 1; i++) {
-        const prev = extrema[i - 1], curr = extrema[i], next = extrema[i + 1];
-        if (prev.type === 'max' && curr.type === 'min' && next.type === 'max') {
-          const depth = Math.max(prev.y - curr.y, next.y - curr.y);
-          depths.push(depth);
-        }
-      }
-
-      if (depths.length > 0) {
-        const avgDepth = depths.reduce((a, b) => a + b, 0) / depths.length;
-        const stdDepth = Math.sqrt(depths.reduce((sum, d) => sum + Math.pow(d - avgDepth, 2), 0) / depths.length);
-        if (stdDepth > 15) {
-          drawLine("⚠️ 壓胸深度不穩定", "yellow");
-        }
-      } else {
-        drawLine("⚠️ 無法判斷壓胸深度（動作過少）", "yellow");
-      }
-
-      // 壓胸頻率判斷 
-      // 初始化壓胸時間列表
-      if (!window.pressTimestamps) window.pressTimestamps = [];
-
-      const now = Date.now();
-      extrema.forEach(e => {
-        if (e.type === 'min') {
-          const timestamp = now - (extrema.length - e.index) * (1000 / 30); // 約略時間對應
-          if (window.pressTimestamps.length === 0 || timestamp - window.pressTimestamps[window.pressTimestamps.length - 1] > 300) {
-            window.pressTimestamps.push(timestamp);
-          }
-        }
+      pose.setOptions({
+        modelComplexity: 1,
+        smoothLandmarks: true,
+        minDetectionConfidence: 0.6,
+        minTrackingConfidence: 0.6
       });
-
-      // 保留近 20 筆資料
-      if (window.pressTimestamps.length > 20) {
-        window.pressTimestamps = window.pressTimestamps.slice(-20);
-      }
-
-      // 計算平均節奏
-      if (window.pressTimestamps.length >= 5) {
-        const intervals = [];
-        for (let i = 1; i < window.pressTimestamps.length; i++) {
-          intervals.push(window.pressTimestamps[i] - window.pressTimestamps[i - 1]);
-        }
-        const avgInterval = intervals.reduce((a, b) => a + b, 0) / intervals.length;
-        const frequency = 60000 / avgInterval;
-
-        drawLine(`壓胸頻率: ${frequency.toFixed(1)} 下/分`, frequency >= 110 && frequency <= 120 ? "lime" : "yellow");
-
-        if (frequency < 110 || frequency > 120) {
-          drawLine("⚠️ 壓胸頻率不正確 (建議 110~120)", "yellow");
-        }
-      }
-
+      pose.onResults(onResults);
+      return pose;
     }
 
-    const pose = new Pose({
-      locateFile: file => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}`
+    const userPose = createPose(results => {
+      userCtx.clearRect(0, 0, userCanvas.width, userCanvas.height);
+      userCtx.drawImage(userVideo, 0, 0, userCanvas.width, userCanvas.height);
+      drawPose(userCtx, results.poseLandmarks);
     });
 
-    pose.setOptions({
-      modelComplexity: 2,
-      smoothLandmarks: true,
-      enableSegmentation: false,
-      minDetectionConfidence: 0.5,
-      minTrackingConfidence: 0.7,
+    const demoPose = createPose(results => {
+      demoCtx.clearRect(0, 0, demoCanvas.width, demoCanvas.height);
+      demoCtx.drawImage(demoVideo, 0, 0, demoCanvas.width, demoCanvas.height);
+      drawPose(demoCtx, results.poseLandmarks);
     });
 
-    pose.onResults(onResults);
-
-    const camera = new Camera(video, {
+    // 啟動使用者鏡頭
+    const camera = new Camera(userVideo, {
       onFrame: async () => {
-        await pose.send({ image: video });
+        resizeCanvases();
+        await userPose.send({ image: userVideo });
       },
       width: 640,
-      height: 480,
+      height: 480
     });
-
     camera.start();
+
+    // 啟動影片姿勢分析
+    demoVideo.addEventListener('loadeddata', () => {
+      function analyzeDemoFrame() {
+        resizeCanvases();
+        demoPose.send({ image: demoVideo });
+        requestAnimationFrame(analyzeDemoFrame);
+      }
+      analyzeDemoFrame();
+    });
   </script>
 </body>
-
 </html>
