--- a/cpr_pose.html
+++ b/cpr_pose.html
@@ -3,111 +3,130 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CPR Dual Pose Detection</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CPR Pose Detection</title>
   <style>
-    html, body {
+    html,
+    body {
       margin: 0;
       padding: 0;
+      width: 100%;
+      height: 100%;
       background: black;
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-direction: row;
+      overflow: hidden;
     }
-    .container {
-      flex: 1;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    video, canvas {
+
+    #video,
+    #canvas {
       position: absolute;
+      top: 50%;
+      left: 50%;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      max-width: 100vw;
+      max-height: 100vh;
+      transform: translate(-50%, -50%);
+      object-fit: contain;
     }
-    @media (orientation: portrait) {
-      body {
-        flex-direction: column;
-      }
+
+    #video {
+      z-index: 0;
+    }
+
+    #canvas {
+      z-index: 1;
+      pointer-events: none;
     }
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <video id="userVideo" autoplay playsinline muted></video>
-    <canvas id="userCanvas"></canvas>
-  </div>
-
-  <div class="container">
-    <video id="demoVideo" src="CPR_demonstration.mov" autoplay muted loop playsinline></video>
-    <canvas id="demoCanvas"></canvas>
-  </div>
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvas"></canvas>
 
   <!-- MediaPipe -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
 
   <script>
-    const userVideo = document.getElementById('userVideo');
-    const userCanvas = document.getElementById('userCanvas');
-    const userCtx = userCanvas.getContext('2d');
+    const video = document.getElementById("video");
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
 
-    const demoVideo = document.getElementById('demoVideo');
-    const demoCanvas = document.getElementById('demoCanvas');
-    const demoCtx = demoCanvas.getContext('2d');
-
-    function resizeCanvases() {
-      userCanvas.width = userVideo.videoWidth;
-      userCanvas.height = userVideo.videoHeight;
-      demoCanvas.width = demoVideo.videoWidth;
-      demoCanvas.height = demoVideo.videoHeight;
+    function resizeCanvas() {
+      if (video.videoWidth && video.videoHeight) {
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+      }
     }
 
-    window.addEventListener('resize', resizeCanvases);
+    video.addEventListener('loadedmetadata', resizeCanvas);
+    window.addEventListener('resize', resizeCanvas);
 
-    // 使用你原本的偵測設定（提示、框線...）
-    async function runFullAnalysis(ctx, video, canvas, results) {
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
+    const boxMarginRatio = 0.2;
+    function getBoxDimensions() {
+      const width = canvas.width;
+      const height = canvas.height;
+      const boxX = width * boxMarginRatio;
+      const boxY = height * boxMarginRatio;
+      const boxWidth = width * (1 - 2 * boxMarginRatio);
+      const boxHeight = height * (1 - 2 * boxMarginRatio);
+      return { boxX, boxY, boxWidth, boxHeight };
+    }
+
+    function midpoint(p1, p2) {
+      return { x: (p1.x + p2.x) / 2, y: (p1.y + p2.y) / 2 };
+    }
+
+    function calcAngle(a, b, c) {
+      const ab = [b.x - a.x, b.y - a.y];
+      const cb = [b.x - c.x, b.y - c.y];
+      const dot = ab[0] * cb[0] + ab[1] * cb[1];
+      const magAB = Math.hypot(ab[0], ab[1]);
+      const magCB = Math.hypot(cb[0], cb[1]);
+      return Math.acos(dot / (magAB * magCB)) * (180 / Math.PI);
+    }
+
+    function isArmVertical(shoulder, wrist) {
+      const dx = shoulder.x - wrist.x;
+      const dy = shoulder.y - wrist.y;
+      const angle = Math.abs(Math.atan2(dy, dx) * 180 / Math.PI);
+      return angle > 70 && angle < 110;
+    }
+
+    function areElbowsTogether(le, re, threshold = 0.2) {
+      const dx = le.x - re.x;
+      const dy = le.y - re.y;
+      return Math.hypot(dx, dy) < threshold;
+    }
+
+    function onResults(results) {
+      resizeCanvas();
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+      const { boxX, boxY, boxWidth, boxHeight } = getBoxDimensions();
+      ctx.strokeStyle = "green";
+      ctx.lineWidth = 6;
+      ctx.strokeRect(boxX, boxY, boxWidth, boxHeight);
 
       if (!results.poseLandmarks) return;
+
+      let textLine = 60;
+      const drawLine = (text, color = "white") => {
+        ctx.fillStyle = color;
+        ctx.font = `${canvas.height * 0.04}px Arial`;
+        ctx.fillText(text, 20, textLine);
+        textLine += canvas.height * 0.05;
+      };
 
       const lm = results.poseLandmarks;
       const ls = lm[11], rs = lm[12];
       const le = lm[13], re = lm[14];
       const lw = lm[15], rw = lm[16];
 
-      const midpoint = (p1, p2) => ({ x: (p1.x + p2.x) / 2, y: (p1.y + p2.y) / 2 });
-      const calcAngle = (a, b, c) => {
-        const ab = [b.x - a.x, b.y - a.y];
-        const cb = [b.x - c.x, b.y - c.y];
-        const dot = ab[0] * cb[0] + ab[1] * cb[1];
-        const magAB = Math.hypot(...ab);
-        const magCB = Math.hypot(...cb);
-        return Math.acos(dot / (magAB * magCB)) * (180 / Math.PI);
-      };
-      const isArmVertical = (shoulder, wrist) => {
-        const dx = shoulder.x - wrist.x;
-        const dy = shoulder.y - wrist.y;
-        const angle = Math.abs(Math.atan2(dy, dx) * 180 / Math.PI);
-        return angle > 70 && angle < 110;
-      };
-      const areElbowsTogether = (le, re, threshold = 0.2) => {
-        const dx = le.x - re.x;
-        const dy = le.y - re.y;
-        return Math.hypot(dx, dy) < threshold;
-      };
-
-      // 畫手臂線
-      ctx.strokeStyle = 'lime';
+      ctx.strokeStyle = "lime";
       ctx.lineWidth = 6;
+
       ctx.beginPath();
       ctx.moveTo(ls.x * canvas.width, ls.y * canvas.height);
       ctx.lineTo(le.x * canvas.width, le.y * canvas.height);
@@ -120,15 +139,6 @@
       ctx.lineTo(rw.x * canvas.width, rw.y * canvas.height);
       ctx.stroke();
 
-      // 提示與角度顯示
-      let textLine = 30;
-      const drawLine = (text, color = "white") => {
-        ctx.fillStyle = color;
-        ctx.font = `${canvas.height * 0.04}px Arial`;
-        ctx.fillText(text, 20, textLine);
-        textLine += canvas.height * 0.05;
-      };
-
       const leftAngle = calcAngle(ls, le, lw);
       const rightAngle = calcAngle(rs, re, rw);
 
@@ -138,44 +148,138 @@
       if (leftAngle < 160 || rightAngle < 160) drawLine("⚠️ 手肘未打直", "yellow");
       if (!isArmVertical(ls, lw) || !isArmVertical(rs, rw)) drawLine("⚠️ 手腕未在肩膀正下方", "yellow");
       if (!areElbowsTogether(le, re)) drawLine("⚠️ 雙手未交疊", "yellow");
+
+      if (!window.pressPath) window.pressPath = [];
+      const pressPoint = midpoint(lw, rw);
+      const px = pressPoint.x * canvas.width;
+      const py = pressPoint.y * canvas.height;
+      window.pressPath.push({ x: px, y: py });
+      if (window.pressPath.length > 60) window.pressPath.shift();
+
+      function smoothPath(path, k = 5) {
+        const smoothed = [];
+        for (let i = 0; i < path.length; i++) {
+          let xSum = 0, ySum = 0, count = 0;
+          for (let j = i - Math.floor(k / 2); j <= i + Math.floor(k / 2); j++) {
+            if (path[j]) {
+              xSum += path[j].x;
+              ySum += path[j].y;
+              count++;
+            }
+          }
+          smoothed.push({ x: xSum / count, y: ySum / count });
+        }
+        return smoothed;
+      }
+
+      const smoothedPath = smoothPath(window.pressPath);
+
+      ctx.strokeStyle = "aqua";
+      ctx.lineWidth = 3;
+      ctx.beginPath();
+      smoothedPath.forEach((pt, i) => {
+        if (i === 0) ctx.moveTo(pt.x, pt.y);
+        else ctx.lineTo(pt.x, pt.y);
+      });
+      ctx.stroke();
+
+      const yValues = smoothedPath.map(p => p.y);
+
+      function findExtrema(yVals) {
+        const peaks = [];
+        for (let i = 1; i < yVals.length - 1; i++) {
+          if (yVals[i] > yVals[i - 1] && yVals[i] > yVals[i + 1]) {
+            peaks.push({ type: 'max', y: yVals[i], index: i });
+          }
+          if (yVals[i] < yVals[i - 1] && yVals[i] < yVals[i + 1]) {
+            peaks.push({ type: 'min', y: yVals[i], index: i });
+          }
+        }
+        return peaks;
+      }
+
+      const extrema = findExtrema(yValues);
+
+      const depths = [];
+      for (let i = 1; i < extrema.length - 1; i++) {
+        const prev = extrema[i - 1], curr = extrema[i], next = extrema[i + 1];
+        if (prev.type === 'max' && curr.type === 'min' && next.type === 'max') {
+          const depth = Math.max(prev.y - curr.y, next.y - curr.y);
+          depths.push(depth);
+        }
+      }
+
+      if (depths.length > 0) {
+        const avgDepth = depths.reduce((a, b) => a + b, 0) / depths.length;
+        const stdDepth = Math.sqrt(depths.reduce((sum, d) => sum + Math.pow(d - avgDepth, 2), 0) / depths.length);
+        if (stdDepth > 15) {
+          drawLine("⚠️ 壓胸深度不穩定", "yellow");
+        }
+      } else {
+        drawLine("⚠️ 無法判斷壓胸深度（動作過少）", "yellow");
+      }
+
+      // 壓胸頻率判斷 
+      // 初始化壓胸時間列表
+      if (!window.pressTimestamps) window.pressTimestamps = [];
+
+      const now = Date.now();
+      extrema.forEach(e => {
+        if (e.type === 'min') {
+          const timestamp = now - (extrema.length - e.index) * (1000 / 30); // 約略時間對應
+          if (window.pressTimestamps.length === 0 || timestamp - window.pressTimestamps[window.pressTimestamps.length - 1] > 300) {
+            window.pressTimestamps.push(timestamp);
+          }
+        }
+      });
+
+      // 保留近 20 筆資料
+      if (window.pressTimestamps.length > 20) {
+        window.pressTimestamps = window.pressTimestamps.slice(-20);
+      }
+
+      // 計算平均節奏
+      if (window.pressTimestamps.length >= 5) {
+        const intervals = [];
+        for (let i = 1; i < window.pressTimestamps.length; i++) {
+          intervals.push(window.pressTimestamps[i] - window.pressTimestamps[i - 1]);
+        }
+        const avgInterval = intervals.reduce((a, b) => a + b, 0) / intervals.length;
+        const frequency = 60000 / avgInterval;
+
+        drawLine(`壓胸頻率: ${frequency.toFixed(1)} 下/分`, frequency >= 110 && frequency <= 120 ? "lime" : "yellow");
+
+        if (frequency < 110 || frequency > 120) {
+          drawLine("⚠️ 壓胸頻率不正確 (建議 110~120)", "yellow");
+        }
+      }
+
     }
 
-    function createPose(callback) {
-      const pose = new Pose({
-        locateFile: file => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}`
-      });
-      pose.setOptions({
-        modelComplexity: 2,
-        smoothLandmarks: true,
-        enableSegmentation: false,
-        minDetectionConfidence: 0.5,
-        minTrackingConfidence: 0.7,
-      });
-      pose.onResults(callback);
-      return pose;
-    }
+    const pose = new Pose({
+      locateFile: file => `https://cdn.jsdelivr.net/npm/@mediapipe/pose/${file}`
+    });
 
-    const userPose = createPose(results => runFullAnalysis(userCtx, userVideo, userCanvas, results));
-    const demoPose = createPose(results => runFullAnalysis(demoCtx, demoVideo, demoCanvas, results));
+    pose.setOptions({
+      modelComplexity: 2,
+      smoothLandmarks: true,
+      enableSegmentation: false,
+      minDetectionConfidence: 0.5,
+      minTrackingConfidence: 0.7,
+    });
 
-    const camera = new Camera(userVideo, {
+    pose.onResults(onResults);
+
+    const camera = new Camera(video, {
       onFrame: async () => {
-        resizeCanvases();
-        await userPose.send({ image: userVideo });
+        await pose.send({ image: video });
       },
       width: 640,
-      height: 480
+      height: 480,
     });
-    camera.start();
 
-    demoVideo.addEventListener('loadeddata', () => {
-      function analyzeDemoFrame() {
-        resizeCanvases();
-        demoPose.send({ image: demoVideo });
-        requestAnimationFrame(analyzeDemoFrame);
-      }
-      analyzeDemoFrame();
-    });
+    camera.start();
   </script>
 </body>
+
 </html>
